# lamp-esp32

./: .gitignore  README.md  justfile  pyproject.toml  pyrightconfig.json
.zed/: settings.json
src/lamp/: led_mgr.py  led_runner.py  main.py  status_led.py  sun_data.py  time_sync.py  wifi.py
